--- a/report/rptPeriksaLab9.jrxml
+++ b/report/rptPeriksaLab9.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="595" pageHeight="842" columnWidth="522" leftMargin="56" rightMargin="17" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.1289478601075549"/>
-	<property name="ireport.x" value="7"/>
-	<property name="ireport.y" value="82"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="55"/>
 	<parameter name="noperiksa" class="java.lang.String"/>
 	<parameter name="norm" class="java.lang.String"/>
 	<parameter name="namapasien" class="java.lang.String"/>
@@ -541,21 +541,21 @@
 	<summary>
 		<band height="104">
 			<staticText>
-				<reportElement mode="Transparent" x="3" y="49" width="134" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
+				<reportElement mode="Transparent" x="343" y="52" width="134" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single">
 					<font fontName="Tahoma" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Pemeriksa,]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement mode="Transparent" x="3" y="88" width="134" height="15"/>
+				<reportElement mode="Transparent" x="343" y="89" width="134" height="15"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single">
 					<font fontName="Tahoma" size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{petugas}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd MMMMM yyyy HH:mm:ss" isBlankWhenNull="false">
-				<reportElement key="textField" mode="Transparent" x="115" y="37" width="139" height="15" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="textField" mode="Transparent" x="385" y="37" width="134" height="15" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -568,7 +568,7 @@
 				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement mode="Transparent" x="0" y="37" width="115" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
+				<reportElement mode="Transparent" x="298" y="37" width="87" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" lineSpacing="Single" markup="none">
 					<font fontName="Tahoma" size="10" isBold="false"/>
 				</textElement>
@@ -595,7 +595,7 @@
 				<text><![CDATA[Kesan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="293" y="52" width="221" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
+				<reportElement mode="Transparent" x="22" y="52" width="138" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single">
 					<font fontName="Tahoma" size="10" isBold="false"/>
 				</textElement>
@@ -628,11 +628,18 @@
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="staticText-1" stretchType="RelativeToBandHeight" mode="Transparent" x="334" y="35" width="51" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
+				<reportElement key="staticText-1" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="37" width="51" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
 				<textElement verticalAlignment="Middle" lineSpacing="Single">
 					<font fontName="Tahoma" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Tgl.Verif :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Transparent" x="6" y="89" width="180" height="15" forecolor="#000000" backcolor="#F0F0DC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" lineSpacing="Single">
+					<font fontName="Tahoma" size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[(                                                     )]]></text>
 			</staticText>
 		</band>
 	</summary>
